plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'org.jetbrains.kotlin.plugin.compose' version '2.1.0'
}

android {
    namespace 'io.github.zensu357.camswap'
    compileSdk 36
    ndkVersion '25.1.8937393'

    // Auto-versioning logic
    def date = new Date()
    def buildTime = date.format('yyyy-MM-dd HH:mm:ss')
    def versionSuffix = date.format('MMddHHmm')
    def versionCodeInt = date.format('yyMMddHH').toInteger()

    signingConfigs {
        release {
            Properties properties = new Properties()
            if (rootProject.file("local.properties").exists()) {
                properties.load(rootProject.file("local.properties").newDataInputStream())
            }

            if (properties.containsKey("storeFile")) {
                storeFile file(properties.getProperty("storeFile"))
                storePassword properties.getProperty("storePassword")
                keyAlias properties.getProperty("keyAlias")
                keyPassword properties.getProperty("keyPassword")
            }
        }
    }

    defaultConfig {
        applicationId "io.github.zensu357.camswap"
        minSdk 26
        targetSdk 36
        versionCode versionCodeInt
        versionName "2.6.${versionSuffix}"

        // Inject build time into BuildConfig
        buildConfigField "String", "BUILD_TIME", "\"${buildTime}\""

        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"

        externalNativeBuild {
            cmake {
                cppFlags "-std=c++17 -fno-exceptions -fno-rtti"
                arguments "-DANDROID_STL=c++_static"
            }
        }
    }

    buildFeatures {
        buildConfig = true
        compose true
        // IUsbCaptureService.aidl —— 宿主进程与目标进程之间的 USB 采集卡 IPC 接口
        aidl true
    }

    // Compose compiler is now managed by org.jetbrains.kotlin.plugin.compose

    packaging {
        resources {
            merges += ['META-INF/xposed/*']
        }
    }

    kotlinOptions {
        jvmTarget = '17'
    }

    buildTypes {
        release {
            if (signingConfigs.release.storeFile) {
                signingConfig signingConfigs.release
            } else {
                signingConfig signingConfigs.debug
            }
            minifyEnabled false
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled false
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    externalNativeBuild {
        cmake {
            path "src/main/cpp/CMakeLists.txt"
            version "3.22.1"
        }
    }

    splits {
        abi {
            enable true
            reset()
            include 'arm64-v8a', 'armeabi-v7a', 'x86_64'
            universalApk false
        }
    }
}

dependencies {
    compileOnly 'io.github.libxposed:api:101.0.0'
    implementation 'io.github.libxposed:service:101.0.0'

    // Core Dependencies
    implementation 'androidx.core:core-ktx:1.10.1'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1'
    implementation 'androidx.activity:activity-compose:1.7.0'
    implementation 'androidx.navigation:navigation-compose:2.7.5'

    // Compose Dependencies
    implementation platform('androidx.compose:compose-bom:2023.08.00')
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.compose.material3:material3'
    implementation 'androidx.compose.material:material-icons-extended'

    // Test dependencies
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:4.11.0'
    testImplementation 'org.mockito:mockito-inline:4.11.0'
    testImplementation 'org.json:json:20231013'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'

    // Coil for image loading and video thumbnails
    implementation 'io.coil-kt:coil-compose:2.5.0'
    implementation 'io.coil-kt:coil-video:2.5.0'

    // Preference
    implementation 'androidx.preference:preference-ktx:1.2.1'

    // ExoPlayer (Media3) - network stream playback
    implementation "androidx.media3:media3-exoplayer:1.6.0"
    implementation "androidx.media3:media3-exoplayer-rtsp:1.6.0"
    implementation "androidx.media3:media3-exoplayer-hls:1.6.0"
    implementation "androidx.media3:media3-exoplayer-dash:1.6.0"
    implementation "androidx.media3:media3-datasource:1.6.0"
    // RTMP：Media3 里 RTMP 是 DataSource 而非 MediaSource，正确的构件是
    // media3-datasource-rtmp（传递依赖 io.antmedia:rtmp-client，含 .so）。
    // 之前反射查找的 androidx.media3.exoplayer.rtmp.RtmpMediaSource$Factory 在 Media3 中并不存在，
    // 导致 rtmp:// 必然降级到 ProgressiveMediaSource 并失败。
    implementation "androidx.media3:media3-datasource-rtmp:1.6.0"

    // USB 采集卡 (UVC) —— saki4510t/UVCCamera 的维护分支，含 libusb/libuvc/libjpeg-turbo，
    // 提供 arm64-v8a / armeabi-v7a / x86 / x86_64 四套 .so，已发布到 Maven Central。
    implementation 'com.herohan:UVCAndroid:1.0.13'
}
